# git-pages-template

./: .gitignore  .gitlab-ci.yml  404.html  README.md  index.html  mkdocs-serve.sh  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  README.devcontainer.md  devcontainer.json
.github/workflows/: main.yml
about/about-me/: index.html
about/work/: index.html
docs/: index.md
docs/about/: about-me.md  work.md
docs/projects/: project-setup.md
docs/work/: projects.md  repositories.md
projects/project-setup/: index.html
search/: search_index.json
work/projects/: index.html
work/repositories/: index.html
